--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
+    "dependencies": {
+        "@types/shell-quote": "^1.6.0",
+        "shell-quote": "^1.6.1"
+    },
     "devDependencies": {
         "typescript": "^2.6.1",
         "vscode": "^1.1.6",
